--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
    
+   
     
 }
 .container{
@@ -181,30 +182,50 @@
     padding-top: 60px;
     align-items: center;
     justify-content: center;
+  
    
    
 }
 .image-section{
     width: 80%;
-   
-    height: 100vh;
+    height: 80vh;
+    align-items: center;
+    justify-content: center;
     display: flex;
+    gap: 20px;
 }
-.img1{
-    width: 50%;
-    height: 200px;
-}
+
 .img1 img{
+    width: 100%;
+    height: 400px;
     border-radius: 10px;
 
 }
-.img2 img{
-    border-radius: 10px;
-}
 .img2{
     width: 50%;
-    height: 200px;
+   
 }
+.img2 img:first-child{
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+}
+.img-mid2{
+    display: flex;
+    gap: 20px;
+}
+.img2 .img-mid2:first-child{
+    width: 30%;
+   
+    
+}
+#mid-11{
+    width: 50%;
+    height: 200px;
+    
+
+}
+
 
 /* -------------------property main */
 .property-main{
@@ -260,6 +281,7 @@
 .room1{
     display: flex;
     align-items: center;
+   
 }
 .room2{
     display: flex;
@@ -427,6 +449,7 @@
     }
     .navbar2{
         width: 100%;
+        padding-block: 10px;
         height: auto;
     }
     .left{
@@ -440,26 +463,82 @@
     }
     .img-main{
         width: 100%;
-        height: auto;
+        height: 100vh;
+        
     }
     .image-section{
         width: 100%;
-        height: auto;
+        height: 80vh;
         display: flex;
+        align-items: center;
         flex-direction: column;
+        padding-block: 20px;
+       
+        
+       
     }
     .img1{
-        width: 100%;
-        height: 200px;
+        display: flex;
+      
+    }
+    .img1 img{
+        width: 150%;
+        height: 350px;
+      
+       
     }
     .img2{
         width: 100%;
-        background-color: green;
         height: 200px;
     }
     .img2:nth-child(2){
         display: none;
     }
+    .room-section{
+        width: 100%;
+        height: auto;
+    }
+    .room{
+        width: 80%;
+        height: auto;
+    }
+    .room h4{
+        display: none;
+    }
+    .room-buttons{
+        display: none;
+    }
+    .amenities{
+        width: 80%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        
+    }
+    .amenitie1{
+        display: flex;
+    align-items: center;
+    justify-content: center;
+
+    }
+    .amenitie2{
+        display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+    .amenitie1 button{
+       padding-inline: 30px;
+       padding-block: 5px;
+    }
+    .amenitie2 button{
+        padding-inline: 30px;
+        padding-block: 5px;
+     }
+     #check{
+        display: none;
+     }
 }
 @media (max-width:980px){
     .container{
@@ -485,5 +564,38 @@
     .reserve-section button{
         padding-inline: 30px;
     }
+    .amenities{
+        width: 80%;
+        height: auto;
+        
+    }
+    .amenitie1{
+        display: none;
+    }
+    .amenitie2{
+        display: none;
+    }
+    hr{
+        display: none;
+    }
+    .location-section{
+        width: 100%;
+        height: auto;
+      
+    }
+    .location{
+        width: 80%;
+        height: auto;
+        
+    }
+    .map-places{
+        width: 80%;
+        height: auto;
+        padding-block: 10px;
+        padding-inline: 20px;
+        flex-direction: column;
+    }
+    
+    
     
 }
